--- a/chatbot/src/layouts/Cart/cart.css
+++ b/chatbot/src/layouts/Cart/cart.css
@@ -14,6 +14,7 @@ code {
   margin: auto;
   box-shadow: 0 2px 6px #555;
   padding: 0 15px;
+  text-align: left;
 }
 /* -------------------Header----------------- */
 header{
