--- a/dashboard/src/components/Card/Card.css
+++ b/dashboard/src/components/Card/Card.css
@@ -8,6 +8,7 @@
   padding: 1rem;
   position: relative;
   cursor: pointer;
+  box-sizing: unset;
 }
 .CompactCard:hover {
   box-shadow: none !important;
