--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="/css/style.css" rel="stylesheet" type="text/css" />
+    <title>Đổi mật khẩu</title>
     <script>
       var status = "<%- JSON.stringify(status) %>";
       if (JSON.parse(status) == "verified") {
@@ -15,21 +16,37 @@
     </script>
   </head>
   <body>
-    <h1><%= email%></h1>
-    <form action="" method="post">
-      <input
-        type="password"
-        name="password"
-        id="password"
-        placeholder="password"
-      /><br />
-      <input
-        type="password"
-        name="confirm-password"
-        id="confirm-password"
-        placeholder="confirm-password"
-      /><br />
-      <input type="submit" value="submit" />
-    </form>
+    <div class="body-applest">
+      <div class="Applest">
+        <div class="auth-wrapper">
+          <div class="auth-inner">
+            <h1><%= email%></h1>
+            <form action="" method="post">
+              <input
+                type="password"
+                name="password"
+                class="form-control"
+                id="password"
+                placeholder="Mật khẩu"
+              /><br />
+              <input
+                type="password"
+                name="confirm-password"
+                class="form-control"
+                id="confirm-password"
+                placeholder="Nhập mật khẩu"
+              /><br />
+              <div class="d-grid">
+                <input
+                  type="submit"
+                  value="Submit"
+                  style="font-size: 1rem; font-weight: 400;background: #1c8ef9; border: none; border-radius: 5px; height: 30px; color: antiquewhite;"
+                />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
