--- a/chatbot/src/components/navbar/NavbarStyles.css
+++ b/chatbot/src/components/navbar/NavbarStyles.css
@@ -119,3 +119,63 @@ li:hover {
     }
 
 }
+
+
+.top-menu-items >ul{
+    height: 100%;
+    display: flex;
+}
+.top-menu-items > ul > li {
+    font-family: var(--main-text-font);
+    padding: 0 12px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: bold;
+    cursor: pointer;
+    position: relative;
+}
+.top-menu-items ul li::before {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100px;
+    bottom: -50%;
+}
+
+.top-menu-item {
+    position: absolute;
+    width: 90px;
+    top: 100px;
+    display: none;
+    opacity: 0;
+    transition: all 0.5s ease;
+    background-color: #fff;
+    height: auto!important;
+    padding: 6px;
+    border: 1px solid #dddddd;
+
+    
+}
+.top-menu-items ul li:hover .top-menu-item {
+    display: block;
+    top: 60px;
+    opacity: 1;
+}
+.top-menu-item li {
+   line-height: 25px;
+   display: flex;
+   justify-content: left!important;
+  
+}
+.top-menu-item li a {
+    font-size: 12px;
+    text-align: left;
+    text-transform: capitalize;
+    color: #333;
+    font-family: var(--main-text-font);
+}
