--- a/chatbot/src/components/SelectsImg/SelectsImgStyles.css
+++ b/chatbot/src/components/SelectsImg/SelectsImgStyles.css
@@ -21,6 +21,7 @@
     bottom: 1rem;
     left: 1rem;
     color: #fff;
-    font-size: 2rem;
+    font-size: 15px;
     font-weight: 500;
+    text-transform: none;
 }
