--- a/chatbot/src/components/navbar/NavbarStyles.css
+++ b/chatbot/src/components/navbar/NavbarStyles.css
@@ -1,3 +1,7 @@
+.nav-menu li {
+    font-weight: bold;
+}
+
 .navbar {
     width: 100%;
     height: 80px;
@@ -10,6 +14,7 @@
     color: rgb(21, 8, 8);
     background-color: #f5f5f5;
     z-index: 99;
+    /* background-color: transparent; */
 }
 
 .navbar:hover {
@@ -111,6 +116,7 @@ li:hover {
         display: none;
     }
 
+
     .nav-icons {
         display: none;
     }
@@ -170,10 +176,11 @@ li:hover {
    line-height: 25px;
    display: flex;
    justify-content: left!important;
+   
   
 }
 .top-menu-item li a {
-    font-size: 12px;
+    font-size: 14px;
     text-align: left;
     text-transform: capitalize;
     color: #333;
